--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Axiz</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/img/logo.svg">
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
   <link href="./assets/css/font-awesome.min.css" rel="stylesheet">
   <link
