--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body class="modal-open">
+<body class="modal-open" id='demo'>
   <app-root></app-root>
 </body>
 
